Fixed the header more, removed excess whitespace.

--- a/projects/static/projects/newstyle.css
+++ b/projects/static/projects/newstyle.css
@@ -19,7 +19,7 @@ div#header{
 	z-index: 999;
 }
 div#container {
-    margin-top: 40px;
+    margin-top: 60px;
 }
 div#spacer{
 	height: 60px;
